--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
           curl -LO https://github.com/kubernetes/kops/releases/download/$(curl -s https://api.github.com/repos/kubernetes/kops/releases/latest | grep tag_name | cut -d '"' -f 4)/kops-linux-amd64
           chmod +x kops-linux-amd64
           sudo mv kops-linux-amd64 /usr/local/bin/kops
-          kops export kubecfg rmit.k8s.local --state s3://rmit-kops-state-7zlvq0
+          kops export kubecfg rmit.k8s.local --state s3://rmit-kops-state-4pa5j1
 
 
 jobs:
@@ -115,7 +115,7 @@ jobs:
   package:
     machine: true
     environment:
-      ECR: <insert>
+      ECR: 871536262940.dkr.ecr.us-east-1.amazonaws.com
       reponame: app
       NODE_ENV: production
     steps:
@@ -166,16 +166,16 @@ workflows:
   build-test-package:
     jobs:
       - build
-      - integration:
-          requires: 
-            - build
-      - e2e:
-          requires:
-            - build
+      # - integration:
+      #     requires: 
+      #       - build
+      # - e2e:
+      #     requires:
+      #       - build
       - package:
           requires:
-            - e2e
-            - integration
+            - build
+            # - integration
           filters:
             branches:
               only: master
