--- a/infra/Makefile
+++ b/infra/Makefile
@@ -5,4 +5,4 @@ down:
 	terraform destroy --auto-approve -var environment=${ENV}
 
 init:
-	terraform init --backend-config="key=state/${ENV}.tfstate" --backend-config="dynamodb_table=" --backend-config="bucket="
+	terraform init --backend-config="key=state/${ENV}.tfstate" --backend-config="dynamodb_table=RMIT-locktable-4pa5j1" --backend-config="bucket=rmit-tfstate-4pa5j1"
