--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,6 +178,10 @@ jobs:
             cd artifacts/infra
             make init
             make up
+      - run:
+          name: deploy app
+          command: | 
+            helm upgrade acme artifacts/acme.tgz -i -n test --set image=$(cat artifacts/image.txt)
 
 workflows:
   version: 2
