--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,6 @@ jobs:
             cd helm 
             helm package acme --app-version ${CIRCLE_SHA1}
             mv acme-0.1.0.tgz ../artifacts/acme.tgz 
-          #helm package helm/acme --app-version ${CIRCLE_SHA1} -d artifacts
       - run:
           name: Package infra
           command: |
@@ -178,10 +177,11 @@ jobs:
             cd artifacts/infra
             make init
             make up
+            terraform output endpoint > ../dbendpoint.txt
       - run:
           name: deploy app
           command: | 
-            helm upgrade acme artifacts/acme.tgz -i -n test --set image=$(cat artifacts/image.txt)
+            helm upgrade acme artifacts/acme.tgz -i -n test --set image=$(cat artifacts/image.txt),dbhost=$(cat artifacts/dbendpoint.txt)
 
 workflows:
   version: 2
