--- a/helm/acme/templates/deployment.yml
+++ b/helm/acme/templates/deployment.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "app"
+  name: "acme"
 spec:
   selector:
     matchLabels:
-      app: "app"
+      app: "acme"
   replicas: {{ .Values.replicaCount }}
   template:
     metadata:
       labels:
-        app: "app"
+        app: "acme"
     spec:
       containers:
       - image: {{ .Values.image }}
-        name: "app"
+        name: "acme"
         env:
           - name: VTT_DBHOST
             value: {{ .Values.dbhost }}
