--- a/helm/acme/templates/service.yml
+++ b/helm/acme/templates/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "app"
+  name: "acme"
 spec:
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 3000
+      targetPort: 3000
       protocol: TCP
   type: LoadBalancer
   selector:
-    app: "app"
+    app: "acme"
