--- a/helm/acme/values.yaml
+++ b/helm/acme/values.yaml
@@ -4,5 +4,5 @@ replicaCount: 5
 image: 871536262940.dkr.ecr.us-east-1.amazonaws.com/app
 dbhost: localhost
 dbuser: postgres
-dbpass: password
+dbpassword: password
 dbname: servian
