--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,11 +178,12 @@ jobs:
             make init
             make up
             terraform output endpoint > ../dbendpoint.txt
+      
       - run:
           name: create namespaces
           command: |
-            kubectl exec create namespace test
-            kubectl exec create namespace prod
+            kubectl create namespace test
+            kubectl create namespace prod
 
       - run:
           name: deploy app
