added deploy-test and start of e2e

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,7 +240,9 @@ workflows:
             - build
       - deploy-test:
           requires:
-              - package
+              - build
+      - approval:
+          type: approval    
       - deploy-prod:
           requires:
               - deploy-test 
